--- a/Library.Web/wwwroot/css/bookStyle.css
+++ b/Library.Web/wwwroot/css/bookStyle.css
@@ -62,7 +62,7 @@ li.dropdown:hover > .dropdown-menu {
 .book-description {
     margin-top: 10px;
     font-size: 12px;
-    word-break: break-all;
+    word-break: break-word;
 }
 
 .text-danger {
