--- a/Library.Web/Areas/Default/Views/Books/Index.cshtml
+++ b/Library.Web/Areas/Default/Views/Books/Index.cshtml
@@ -37,6 +37,11 @@
                                 <div style="margin-top: 20px;">
                                     <img src="data:image;base64,@Convert.ToBase64String(book.Image)" alt="asd" height="200" width="200" />
                                 </div>
+                                <p>
+                                    <div class="text-center" style="margin-top: 20px; ">
+                                        <span style="font-weight: bold">Rating: @book.Rating / 5</span>
+                                    </div>
+                                </p>
                             }
                         }
                     </div>
