--- a/Library.Web/Areas/Default/Views/Shared/_Layout.cshtml
+++ b/Library.Web/Areas/Default/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                         </li>
                     }
                     <li>
-                        <a href="/Orders">My Orders</span></a>
+                        <a href="/Orders">My Orders</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
