--- a/Library.Web/Areas/Default/Views/Books/Index.cshtml
+++ b/Library.Web/Areas/Default/Views/Books/Index.cshtml
@@ -46,8 +46,10 @@
                         }
                     </div>
                     <div class="col-md-4 properties-column">
-                        <a href="/Books/Book?Id=@book.Id" class="btn btn-link" style="font-size: 20px; color: black;">
-                            <div class="book-title" style="display: inline-block">@book.BookTitle</div>
+                        <a href="/Books/Book?Id=@book.Id" class="btn btn-link" style="font-size: 20px; color: black; ">
+                            <div class="book-title" style="display: inline-block; word-wrap: break-word">
+                                @book.BookTitle
+                            </div>
                         </a>
                         <p>
                             <span>Author: </span>
