--- a/Library.Web/Areas/Default/Views/Books/Book.cshtml
+++ b/Library.Web/Areas/Default/Views/Books/Book.cshtml
@@ -16,7 +16,7 @@
                     </div>
                     <p>
                         <div class="text-center" style="margin-top: 20px; ">
-                            <span style="font-weight: bold">Rating: @book.Rating / 5</span>
+                            <span style="font-weight: bold">Rating: @Model.Rating / 5</span>
                         </div>
                     </p>
                 }
