--- a/Library.Web/Areas/Default/Views/Shared/_Layout.cshtml
+++ b/Library.Web/Areas/Default/Views/Shared/_Layout.cshtml
@@ -36,9 +36,9 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin<b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li><a href="/Admin/Book"><span class="glyphicon glyphicon-list-alt"></span> View books</a></li>
+                                <li><a href="/Admin/Books"><span class="glyphicon glyphicon-list-alt"></span> View books</a></li>
                                 <li class="divider"></li>
-                                <li><a href="/Admin/Book/Add"><span class="glyphicon glyphicon-plus"></span> Add new book</a></li>
+                                <li><a href="/Admin/Books/Add"><span class="glyphicon glyphicon-plus"></span> Add new book</a></li>
                                 <li class="divider"></li>
                                 <li><a href="/Admin/Orders"><span class="glyphicon glyphicon-retweet"></span> Returns</a></li>
                                 <li class="divider"></li>
