--- a/Library.Web/Areas/Admin/Views/Books/Edit.cshtml
+++ b/Library.Web/Areas/Admin/Views/Books/Edit.cshtml
@@ -8,7 +8,7 @@
 <div class="row first-row">
     <div class="text-center col-md-4"> MIEJSCE NA REKLAMY ( ͡° ͜ʖ ͡°) </div>
     <div class="col-md-4">
-        @using (Html.BeginForm("Edit", "Book", FormMethod.Post))
+        @using (Html.BeginForm("Edit", "Books", FormMethod.Post))
         {
             @Html.HiddenFor(m => m.Id);
             <div class="form-group">
@@ -17,9 +17,9 @@
                 @Html.TextBoxFor(m => m.BookTitle, new { @class = "form-control add-textbox" })
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.Author, new { @class = "required add-label" })
-                @Html.ValidationMessageFor(m => m.Author, "", new { @class = "text-danger" })
-                @Html.TextBoxFor(m => m.Author, new { @class = "form-control add-textbox" })
+                @Html.LabelFor(m => m.Author.Name, new { @class = "required add-label" })
+                @Html.ValidationMessageFor(m => m.Author.Name, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(m => m.Author.Name, new { @class = "form-control add-textbox" })
             </div>
             <div class="form-group">
                 @Html.LabelFor(m => m.Year, new { @class = "required add-label" })
@@ -61,7 +61,9 @@
                 @Html.ValidationMessageFor(m => m.Description, "", new { @class = "text-danger" })
                 @Html.TextAreaFor(m => m.Description, new { @class = "form-control description-add-textbox" })
             </div>
-
+            <div class="form-group">
+                <input type="file" name="files" />
+            </div>
             <div style="margin-top: 50px;">
                 <input type="submit" value="Edit book" class="btn btn-primary" style="margin-right: 70px;" />
                 @Html.ActionLink("Go back to the list", "Index", null, new { @class = "btn btn-primary back-btn" })
