--- a/Library.Web/Areas/Admin/Views/Books/Index.cshtml
+++ b/Library.Web/Areas/Admin/Views/Books/Index.cshtml
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="col-md-2" style="margin-top: 110px;">
-                <a href="/Admin/Book/Edit?Id=@book.Id" class="btn btn-link" style="font-size: 20px; color: black;"><span class="glyphicon glyphicon-edit"></span></a>
+                <a href="/Admin/Books/Edit?Id=@book.Id" class="btn btn-link" style="font-size: 20px; color: black;"><span class="glyphicon glyphicon-edit"></span></a>
                 <button onclick="sendDeleteBookCommand('@book.Id')" type="button" class="btn btn-link" style="font-size: 20px; color: black;"><span class="glyphicon glyphicon-trash"></span></button>
             </div>
         }
