--- a/Library.Web/Areas/Admin/Views/Books/Index.cshtml
+++ b/Library.Web/Areas/Admin/Views/Books/Index.cshtml
@@ -10,7 +10,7 @@
 <div class="row">
     <div class="col-md-3">
         <div class="col-md-12 text-center" style="margin-bottom: 30px;">
-            <a href="/Admin/Book/Add" style="font-size: 20px; color: black"><span class="glyphicon glyphicon-plus"></span> Add book</a>
+            <a href="/Admin/Books/Add" style="font-size: 20px; color: black"><span class="glyphicon glyphicon-plus"></span> Add book</a>
         </div>
         <div class="form-group text-center" style="margin-top: 20px; margin-bottom: 20px;">
             <label style="color: black; font-family: Georgia; font-size: 18px;">Search by title</label>
@@ -75,7 +75,7 @@
                             <span style="font-weight:bold;">@book.Id</span>
                         </p>
                     </div>
-                    <div class="col-sm-5" style="display: block">
+                    <div class="col-sm-5 properties-column" >
                         <p class="book-description">@book.Description</p>
                     </div>
                 </div>
