--- a/Library.Web/Areas/Default/Views/Books/Book.cshtml
+++ b/Library.Web/Areas/Default/Views/Books/Book.cshtml
@@ -66,6 +66,6 @@
         <div class="col-md-1"></div>
     </div>
     <div style="margin-top: 30px; float: right; margin-right: 100px;">
-        @Html.ActionLink("Back to the library", "Index", null, new { @class = "btn btn-primary back-btn" })
+        @Html.ActionLink("Back to the library", "Index")
     </div>
 </div>
