--- a/Library.Web/Areas/Default/Views/Books/Index.cshtml
+++ b/Library.Web/Areas/Default/Views/Books/Index.cshtml
@@ -30,6 +30,15 @@
         {
             <div class="col-md-10">
                 <div class="col-md-12 book-row" style="margin-bottom: 20px;">
+                    <div class="col-md-12">
+                        <div class="col-md-8">
+                            <a href="/Books/Book?Id=@book.Id" class="btn btn-link" style="font-size: 20px; color: black;">
+                                <div class="book-title" style="display: inline-block; min-width: 500px;">
+                                    @book.BookTitle
+                                </div>
+                            </a>
+                        </div>
+                    </div>
                     <div class="col-md-4" style="padding-left: 0">
                         @{
                             if (book.Image != null && book.Image.Length > 0)
@@ -46,11 +55,6 @@
                         }
                     </div>
                     <div class="col-md-4 properties-column">
-                        <a href="/Books/Book?Id=@book.Id" class="btn btn-link" style="font-size: 20px; color: black;">
-                            <div class="book-title" style="display: inline-block; word-wrap: break-word">
-                                @book.BookTitle
-                            </div>
-                        </a>
                         <p>
                             <span>Author: </span>
                             <span class="book-span">@book.Author.Name</span>
