--- a/Library.Web/Areas/Default/Views/Shared/_Cart.cshtml
+++ b/Library.Web/Areas/Default/Views/Shared/_Cart.cshtml
@@ -1,6 +1,6 @@
 ﻿<script src="~/js/site.js"></script>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
-<a class="nav navbar-nav navbar-inverse navbar-right" href="/ShoppingCart">
+<a class="nav navbar-nav navbar-inverse navbar-right" href="/Cart">
     <span class="glyphicon glyphicon-shopping-cart" style="font-size: 16px;"></span>
     <span style="font-weight: bold;">Cart</span>
     <strong id="counter"></strong>
