--- a/Library.Web/Areas/Default/Views/Cart/Checkout.cshtml
+++ b/Library.Web/Areas/Default/Views/Cart/Checkout.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/Default/Views/Shared/_Layout.cshtml";
 }
 
-@using (Html.BeginForm("Checkout", "ShoppingCart", FormMethod.Post))
+@using (Html.BeginForm("Checkout", "Cart", FormMethod.Post))
 {
     @Html.HiddenFor(m => m.Books)
     <div class="col-lg-12">
