--- a/Library.Web/Areas/Default/Views/Books/Index.cshtml
+++ b/Library.Web/Areas/Default/Views/Books/Index.cshtml
@@ -24,6 +24,9 @@
                 <a href="/Books/GetByGenre?Genre=@genre.ToString()" class="agenre">@genre</a>
             }
         </div>
+        <div>
+            MIEJSCE NA REKLAMY ( ͡° ͜ʖ ͡°) 
+        </div>
     </div>
     <div class="col-md-9">
         @foreach (var book in Model)
